--- a/homework.html
+++ b/homework.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>homework</title>
   </head>
   <body>
     <header>
-      <a href="#">WebStudio</a>
+      <a class="logo" href="#">WebStudio</a>
       <nav>
         <ul>
           <li>
@@ -77,13 +77,13 @@
         <h2>Чим ми займаємося</h2>
         <ul>
             <li>
-                <img src="/styles/computer.jpg.jpg" alt="комп'ютер">
+                <img src="./styles/computer.jpg" alt="комп'ютер">
             </li>
             <li>
-                <img src="/styles/telefonikomputer.jpg.jpg" alt="телефон і комп'ютер">
+                <img src="./styles/telefonikomputer.jpg" alt="телефон і комп'ютер">
             </li>
             <li>
-                <img src="/styles/grafichniplanshet.jpg.jpg" alt="графічний планшет">
+                <img src="./styles/grafichniplanshet.jpg" alt="графічний планшет">
             </li>
         </ul>
       </section>
@@ -92,7 +92,7 @@
         <h2>Наша команда</h2>
         <ul>
             <li>
-                <img src="/styles/paren1.jpg.jpg" alt="Product Designer">
+                <img src="./styles/paren1.jpg" alt="Product Designer">
                 <figure>
                     <figcaption>Ігор Дем’яненко</figcaption>
                 </figure>
@@ -101,7 +101,7 @@
                 </figure>
             </li>
             <li>
-                <img src="/styles/devyshka.jpg.jpg" alt="Frontend Developer">
+                <img src="./styles/devyshka.jpg" alt="Frontend Developer">
                 <figure>
                     <figcaption>Ольга Репіна</figcaption>
                 </figure>
@@ -110,7 +110,7 @@
                 </figure>
             </li>
             <li>
-                <img src="/styles/paren2.jpg.jpg" alt="Marketing">
+                <img src="./styles/paren2.jpg" alt="Marketing">
                 <figure>
                     <figcaption>Микола Тарасов</figcaption>
                 </figure>
@@ -119,7 +119,7 @@
                 </figure>
             </li>
             <li>
-                <img src="/styles/paren3.jpg.jpg" alt="UI Designer">
+                <img src="./styles/paren3.jpg" alt="UI Designer">
                 <figure>
                     <figcaption>Михайло Єрмаков</figcaption>
                 </figure>
@@ -131,7 +131,7 @@
       </section>
     </main>
     <footer>
-        <a href="#">WebStudio</a>
+        <a class="logo" href="#">WebStudio</a>
         <address>
             <p>м. Київ, пр-т Лесі Українки, 26</p>
             <ul>
